--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "components/espp"]
 	path = components/espp
 	url = git@github.com:esp-cpp/espp
+[submodule "components/idf-extra-components"]
+	path = components/idf-extra-components
+	url = https://github.com/espressif/idf-extra-components
